--- a/formal.plist
+++ b/formal.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://10.72.86.123:8886/hhtx-formal/appver/AnyCall_2.0.0.ipa</string>
+					<string>http://10.72.86.123:8886/hhtx-formal/appver/haihang.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
